holaplex/app/signer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  name: hola-signer
spec:
  revisionHistoryLimit: 3
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: hola-signer
  template:
    metadata:
      labels:
        app: hola-signer
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: hola-config
        - secretRef:
            name: hola-secrets
        name: frontend
        image: 011737333588.dkr.ecr.us-east-1.amazonaws.com/holaplex:signer-dev-e1d5f96
        imagePullPolicy: IfNotPresent
      volumes:
        - name: hola-config
          configMap:
            name: hola-config
