holaplex/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'For internal use only - Please use holaplex.com'
  name: hola-frontend
  namespace: stage-holaplex
spec:
  ingressClassName: nginx
  rules:
  - host: www.holaplex.dev
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hola-frontend
              port:
                number: 3000

  - host: holaplex.dev
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hola-frontend
              port:
                number: 3000
  tls:
  - hosts:
    - holaplex.dev
    secretName: dev-hola-frontend-tls
